styled the scrollbar and fixed the AnimeCardoverlay overflow bug

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,26 @@ body {
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
 		 Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    max-width: 100vw;
+    box-sizing: border-box !important;
+    overflow-x: hidden;
 }
+
+*::-webkit-scrollbar {
+    height: 10px;
+    width: 7px;
+}
+*::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    
+    background: rgb(126,0,255);
+    background: linear-gradient(180deg, rgba(126,0,255,1) 9%, rgba(180,16,218,1) 100%, rgba(180,16,218,1) 100%);
+}
+*::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey;
+    border-radius: 10px;
+}
+
 
 a {
     text-decoration: none;
